--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,11 +5,18 @@
     android:background="@android:color/white"
     android:orientation="vertical" >
 
-    <FrameLayout
-        android:id="@+id/second_flyt_content"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_vp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1" >
+
+        <FrameLayout
+            android:id="@+id/second_flyt_content"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+    </android.support.v4.view.ViewPager>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -67,5 +74,5 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/second_self_selector" />
         </LinearLayout>
-    </LinearLayout>
+    </LinearLayout>>
 </LinearLayout>
